--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ library/__pycache__/forecast.cpython-38.pyc
 library/__pycache__/layout.cpython-38.pyc
 library/__pycache__/server.cpython-38.pyc
 library/__pycache__/stockClass.cpython-38.pyc
+library/__pycache__/utils.cpython-38.pyc
