--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,12 @@
 {
     "configurations": [
         {
+            "name": "Python: Modulo",
+            "type": "python",
+            "request": "launch",
+            "module": "dashboard.py"
+        },
+        {
             "name": "Python: File corrente",
             "type": "python",
             "request": "launch",
