--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-__pycache__/trading_dash.cpython-38.pyc
-__pycache__/dashboard.cpython-38.pyc
-library/__pycache__/__init__.cpython-38.pyc
-library/__pycache__/dashCallbacks.cpython-38.pyc
-library/__pycache__/forecast.cpython-38.pyc
-library/__pycache__/layout.cpython-38.pyc
-library/__pycache__/server.cpython-38.pyc
-library/__pycache__/stockClass.cpython-38.pyc
-library/__pycache__/utils.cpython-38.pyc
+__pycache__/*.*
+src/__pycache__/
+src
