--- a/requirements.txt
+++ b/requirements.txt
@@ -1,179 +1,85 @@
-absl-py==0.12.0
-aiohttp==3.8.1
-aiosignal==1.2.0
-anyio @ file:///opt/concourse/worker/volumes/live/64740ac7-3a9c-4fbb-6685-a51c4ff8b4ca/volume/anyio_1617783319350/work/dist
-appnope @ file:///opt/concourse/worker/volumes/live/5f13e5b3-5355-4541-5fc3-f08850c73cf9/volume/appnope_1606859448618/work
-argon2-cffi @ file:///opt/concourse/worker/volumes/live/d733ceb5-7f19-407b-7da7-a386540ab855/volume/argon2-cffi_1613037492998/work
-astroid==2.4.2
+absl-py==1.0.0
 astunparse==1.6.3
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-async-timeout==4.0.2
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-Babel @ file:///tmp/build/80754af9/babel_1620871417480/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backports.zoneinfo==0.2.1
-binance==0.3
-bleach @ file:///tmp/build/80754af9/bleach_1628110601003/work
-Brotli @ file:///opt/concourse/worker/volumes/live/6f34e4d0-4572-4e67-52c6-900349b58bc0/volume/brotli-split_1602517645446/work
-brotlipy==0.7.0
-cachetools==4.2.1
-certifi==2021.10.8
-cffi @ file:///opt/concourse/worker/volumes/live/506ff722-306a-4142-6379-cfea99aadbed/volume/cffi_1625814701363/work
-chardet==3.0.4
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+Brotli==1.0.9
+cachetools==4.2.4
+certifi==2021.5.30
+charset-normalizer==2.0.9
 click==8.0.3
-cmdstanpy==0.9.5
-convertdate==2.3.0
-cryptography @ file:///opt/concourse/worker/volumes/live/732d2752-e4cb-4715-726b-56d890f169fb/volume/cryptography_1639414586414/work
-cycler==0.10.0
-Cython==0.29.17
-dash @ file:///tmp/build/80754af9/dash_1611168717544/work
-dash-core-components==1.12.0
+convertdate==2.3.2
+cycler==0.11.0
+Cython==0.29.26
+dash==2.0.0
+dash-core-components==2.0.0
 dash-daq==0.5.0
-dash-html-components==1.1.1
-dash-renderer==1.8.0
-dash-table==4.10.1
-dateparser==1.1.0
-debugpy @ file:///opt/concourse/worker/volumes/live/e17abc9f-08a9-4dca-4e9b-e6d24bde47ce/volume/debugpy_1637091828617/work
-decorator @ file:///tmp/build/80754af9/decorator_1632776554403/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints==0.3
-ephem==3.7.7.1
-fbprophet==0.7.1
-Flask @ file:///tmp/build/80754af9/flask_1634118196080/work
-Flask-Caching==1.9.0
-Flask-Compress @ file:///tmp/build/80754af9/flask-compress_1623922802283/work
-flatbuffers==1.12
-frozenlist==1.2.0
-future==0.18.2
-gast==0.3.3
-google-auth==1.29.0
-google-auth-oauthlib==0.4.4
+dash-html-components==2.0.0
+dash-table==5.0.0
+ephem==4.1.3
+Flask==2.0.2
+Flask-Caching==1.10.1
+Flask-Compress==1.10.1
+flatbuffers==2.0
+fonttools==4.28.5
+gast==0.5.3
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
-hijri-converter==2.1.1
-holidays==0.10.5.2
-idna @ file:///tmp/build/80754af9/idna_1637925883363/work
-importlib-metadata @ file:///opt/concourse/worker/volumes/live/68796648-0236-4a85-4beb-f1ddd08dccd5/volume/importlib-metadata_1638542894284/work
-investpy==1.0.3
-ipykernel @ file:///opt/concourse/worker/volumes/live/616a1efd-eea7-4044-41a3-24697c50c98e/volume/ipykernel_1633545427960/work/dist/ipykernel-6.4.1-py3-none-any.whl
-ipython @ file:///opt/concourse/worker/volumes/live/30677934-34e5-4ba0-6524-7ae6e6bf03ae/volume/ipython_1635944195703/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-isort==5.4.2
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-jedi @ file:///opt/concourse/worker/volumes/live/904d39c2-2f20-46c0-487d-9a3d2725434d/volume/jedi_1611333757211/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1635780242639/work
-joblib==1.0.0
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///Users/ktietz/demo/mc3/conda-bld/jsonschema_1630511932244/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1637148478538/work
-jupyter-core @ file:///opt/concourse/worker/volumes/live/f9f855ff-e473-406b-58ee-08c748b6b0e7/volume/jupyter_core_1636537039543/work
-jupyter-server @ file:///opt/concourse/worker/volumes/live/4f2e970c-4cba-4227-75ae-10ebe3b5f9c3/volume/jupyter_server_1616084051538/work
-jupyterlab @ file:///tmp/build/80754af9/jupyterlab_1635799997693/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1633419203660/work
-Keras==2.4.3
+grpcio==1.43.0
+h5py==3.6.0
+hijri-converter==2.2.2
+idna==3.3
+investpy==1.0.7
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+keras==2.8.0rc0
 Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
+kiwisolver==1.3.2
 korean-lunar-calendar==0.2.1
-lazy-object-proxy==1.4.3
-LunarCalendar==0.0.9
-lxml @ file:///opt/concourse/worker/volumes/live/841c06e2-afb5-4143-7393-7301276d4e13/volume/lxml_1640178269776/work
-Markdown==3.3.4
-MarkupSafe @ file:///opt/concourse/worker/volumes/live/c9141381-1dba-485b-7c96-99007bf7bcfd/volume/markupsafe_1621528150226/work
-matplotlib==3.3.4
-matplotlib-inline @ file:///tmp/build/80754af9/matplotlib-inline_1628242447089/work
-mccabe==0.6.1
-mistune @ file:///opt/concourse/worker/volumes/live/95802d64-d39c-491b-74ce-b9326880ca54/volume/mistune_1594373201816/work
-mkl-fft==1.3.1
-mkl-random @ file:///opt/concourse/worker/volumes/live/f196a661-8e33-4aac-63bc-efb2ff50e035/volume/mkl_random_1626186080069/work
-mkl-service==2.4.0
-multidict==5.2.0
-multitasking==0.0.9
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///opt/concourse/worker/volumes/live/261830ba-5810-4b13-650e-a959ab6ae9fb/volume/nbconvert_1624479071551/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///opt/concourse/worker/volumes/live/62166e0f-094e-4c82-4a98-f588c0b92a26/volume/notebook_1637161798319/work
-numpy @ file:///opt/concourse/worker/volumes/live/ceac9fd4-1ae1-48f8-612a-0c99bf783d0e/volume/numpy_and_numpy_base_1634106709647/work
-oauthlib==3.1.0
+libclang==12.0.0
+lxml==4.7.1
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+multitasking==0.0.10
+numpy==1.21.5
+oauthlib==3.1.1
 opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas==1.1.1
-pandocfilters @ file:///opt/concourse/worker/volumes/live/c330e404-216d-466b-5327-8ce8fe854d3a/volume/pandocfilters_1605120442288/work
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-patsy==0.5.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==8.1.0
-plotly @ file:///tmp/build/80754af9/plotly_1626182254919/work
-pmdarima==1.8.0
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1637050397234/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-protobuf==3.15.8
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+packaging==21.3
+pandas==1.3.5
+patsy==0.5.2
+Pillow==8.4.0
+plotly==5.5.0
+pmdarima==1.8.4
+protobuf==3.19.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///tmp/build/80754af9/pygments_1629234116488/work
-pylint==2.6.0
-PyMeeus==0.3.7
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1635333100036/work
-pyparsing @ file:///tmp/build/80754af9/pyparsing_1635766073266/work
-pyrsistent @ file:///opt/concourse/worker/volumes/live/ac52847c-5646-4583-7286-af47061006cb/volume/pyrsistent_1636111017177/work
-PySocks @ file:///opt/concourse/worker/volumes/live/85a5b906-0e08-41d9-6f59-084cee4e9492/volume/pysocks_1594394636991/work
-pystan==2.19.1.1
-python-binance==1.0.15
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+PyMeeus==0.5.11
+pyparsing==3.0.6
+python-dateutil==2.8.2
 pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-pyzmq @ file:///opt/concourse/worker/volumes/live/12b008ff-2acb-4e15-682d-fce50395a9d4/volume/pyzmq_1638434992289/work
-regex==2021.11.10
-requests @ file:///tmp/build/80754af9/requests_1629994808627/work
+requests==2.26.0
 requests-oauthlib==1.3.0
-rope @ file:///tmp/build/80754af9/rope_1636994440010/work
-rsa==4.7.2
-scikit-learn==0.24.1
-scipy @ file:///opt/concourse/worker/volumes/live/8f68d291-1564-4c63-4bf1-6b1f103a9a36/volume/scipy_1630606804849/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
+retrying
+rsa==4.8
+scikit-learn==1.0.2
+scipy==1.7.3
 setuptools-git==1.2
-six @ file:///opt/concourse/worker/volumes/live/5b31cb27-1e37-4ca5-6e9f-86246eb206d2/volume/six_1605205320872/work
-sklearn==0.0
-sniffio @ file:///opt/concourse/worker/volumes/live/1faeb672-6d3f-4f1f-7861-294fcf282962/volume/sniffio_1614030462215/work
-statsmodels==0.12.2
-style==1.1.0
-tenacity @ file:///opt/concourse/worker/volumes/live/eac3b803-2ee6-40ee-4731-160259386dec/volume/tenacity_1632761170899/work
-tensorboard==2.5.0
-tensorboard-data-server==0.6.0
+six
+statsmodels==0.13.1
+tenacity==8.0.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.4.1
-tensorflow-estimator==2.4.0
+tensorflow==2.8.0rc0
+tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
-terminado==0.9.4
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-threadpoolctl==2.1.0
-toml==0.10.1
-torch==1.8.1
-tornado @ file:///opt/concourse/worker/volumes/live/05341796-4198-4ded-4a9a-332fde3cdfd1/volume/tornado_1606942323372/work
-tqdm==4.56.0
-tradingview-ta==3.2.9
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
+tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.0.0
+tqdm==4.62.3
 trendet==0.7
-typing-extensions==3.7.4.3
-tzdata==2021.5
-tzlocal==4.1
-ujson==5.1.0
-Unidecode==1.2.0
-update==0.0.1
+typing_extensions==4.0.1
+Unidecode==1.3.2
 urllib3==1.26.7
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websockets==9.1
-Werkzeug @ file:///tmp/build/80754af9/werkzeug_1635505089296/work
-wrapt==1.12.1
-yarl==1.7.2
+Werkzeug==2.0.2
+wrapt==1.13.3
 yfinance==0.1.67
-zipp @ file:///tmp/build/80754af9/zipp_1633618647012/work
