--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ trendet==0.7
 typing_extensions==4.0.1
 Unidecode==1.3.2
 urllib3==1.26.7
+waitress==2.0.0
 Werkzeug==2.0.2
 wrapt==1.13.3
 yfinance==0.1.67
