--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ __pycache__/*.*
 src/__pycache__/
 .DS_Store
 src/.DS_Store
+src/__pycache__/__init__.cpython-38.pyc
+src/__pycache__/layout.cpython-38.pyc
+requirements.txt
+src/__pycache__/layout.cpython-38.pyc
