Added yahoo csv - pyalgo interface

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ src/__pycache__/__init__.cpython-38.pyc
 src/__pycache__/layout.cpython-38.pyc
 requirements.txt
 src/__pycache__/layout.cpython-38.pyc
+tickerDump.csv
