--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "justMyCode": true
         },
         {
             "name": "Docker: Python - General",
