--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 absl-py==1.0.0
+aiohttp==3.8.1
+aiosignal==1.2.0
 astunparse==1.6.3
+async-timeout==4.0.2
+attrs==21.4.0
 Brotli==1.0.9
 cachetools==4.2.4
 certifi==2021.5.30
@@ -13,12 +17,14 @@ dash-core-components==2.0.0
 dash-daq==0.5.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+dateparser==1.1.0
 ephem==4.1.3
 Flask==2.0.2
 Flask-Caching==1.10.1
 Flask-Compress==1.10.1
 flatbuffers==2.0
 fonttools==4.28.5
+frozenlist==1.2.0
 gast==0.5.3
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
@@ -40,6 +46,7 @@ lxml==4.7.1
 Markdown==3.3.6
 MarkupSafe==2.0.1
 matplotlib==3.5.1
+multidict==5.2.0
 multitasking==0.0.10
 numpy==1.21.5
 oauthlib==3.1.1
@@ -51,12 +58,16 @@ Pillow==8.4.0
 plotly==5.5.0
 pmdarima==1.8.4
 protobuf==3.19.1
+PyAlgoTrade==0.20
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 PyMeeus==0.5.11
 pyparsing==3.0.6
+python-binance==1.0.15
 python-dateutil==2.8.2
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
+regex==2021.11.10
 requests==2.26.0
 requests-oauthlib==1.3.0
 retrying
@@ -66,6 +77,7 @@ scipy==1.7.3
 setuptools-git==1.2
 six
 statsmodels==0.13.1
+TA-Lib==0.4.22
 tenacity==8.0.1
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
@@ -75,14 +87,20 @@ tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
 tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.0.0
+tornado==6.1
 tqdm==4.62.3
 trendet==0.7
+tweepy==4.4.0
 typing_extensions==4.0.1
+tzdata==2021.5
+tzlocal==4.1
+ujson==5.1.0
 Unidecode==1.3.2
 urllib3==1.26.7
 waitress==2.0.0
+websockets==9.1
 Werkzeug==2.0.2
 wrapt==1.13.3
+ws4py==0.5.1
+yarl==1.7.2
 yfinance==0.1.67
-pyalgotrade==0.20
-ta-lib==0.4.22
